--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "npm run build && ls -la .modelence/client",
-  "outputDirectory": ".modelence/client",
+  "buildCommand": "npm run build && ls -la src/client/dist",
+  "outputDirectory": "src/client/dist",
   "framework": "vite",
   "installCommand": "npm install",
   "devCommand": "npm run dev"
