--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "npm run build && ls -la src/client/dist",
-  "outputDirectory": "src/client/dist",
+  "buildCommand": "npx vite build",
+  "outputDirectory": "dist",
   "framework": "vite",
-  "installCommand": "npm install",
-  "devCommand": "npm run dev"
+  "installCommand": "npm install"
 }
