--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.4.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.0",
+    "serve": "^14.2.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
